tests/machine/x/fortran/basic_compare.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/basic_compare.f90:3:3:

    3 |   a = (10 - 3)
      |   1
Error: Symbol ‘a’ at (1) has no IMPLICIT type
/workspace/mochi/tests/machine/x/fortran/basic_compare.f90:4:3:

    4 |   b = (2 + 2)
      |   1
Error: Symbol ‘b’ at (1) has no IMPLICIT type

