tests/machine/x/fortran/basic_compare.f90
program basic_compare
  implicit none
  integer :: a
  integer :: b
  a = (10 - 3)
  b = (2 + 2)
  print *, a
  print *, (a == 7)
  print *, (b < 5)
end program basic_compare
